feat: Refactored for OpenAPI codegen
