# openapi.yaml
@@ -1,10 +1,10 @@
-openapi: "3.0.0"
+openapi: 3.0.2
 info:
-  title: FastAPI
-  version: 0.1.0
-servers:
-  - url: http://localhost:8000
-    description: Local server
+  title: ChromaDB API
+  description: This is OpenAPI schema for ChromaDB API.
+  version: 1.0.0
+  x-logo:
+    url: https://www.trychroma.com/chroma-logo.png
 paths:
   /api/v1:
     get:
@@ -55,28 +55,9 @@ paths:
             application/json:
               schema:
                 additionalProperties:
-                  type: number
+                  type: integer
                 type: object
                 title: Response Heartbeat Api V1 Heartbeat Get
-  /api/v1/raw_sql:
-    post:
-      summary: Raw Sql
-      operationId: raw_sql
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RawSql'
-        required: true
-      responses:
-        '200':
-          description: Successful Response
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
   /api/v1/collections:
     get:
       summary: List Collections
@@ -87,9 +68,10 @@ paths:
           content:
             application/json:
               schema:
-                type: array
                 items:
                   $ref: '#/components/schemas/Collection'
+                type: array
+                title: Response List Collections Api V1 Collections Get
     post:
       summary: Create Collection
       operationId: create_collection
@@ -105,7 +87,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CreateCollectionResponse'
+                $ref: '#/components/schemas/Collection'
         '422':
           description: Validation Error
           content:
@@ -136,6 +118,7 @@ paths:
             application/json:
               schema:
                 type: boolean
+                title: Response Add Api V1 Collections  Collection Id  Add Post
         '422':
           description: Validation Error
           content:
@@ -166,6 +149,7 @@ paths:
             application/json:
               schema:
                 type: boolean
+                title: Response Update Api V1 Collections  Collection Id  Update Post
         '422':
           description: Validation Error
           content:
@@ -196,6 +180,7 @@ paths:
             application/json:
               schema:
                 type: boolean
+                title: Response Upsert Api V1 Collections  Collection Id  Upsert Post
         '422':
           description: Validation Error
           content:
@@ -225,7 +210,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CollectionData'
+                $ref: '#/components/schemas/GetResult'
         '422':
           description: Validation Error
           content:
@@ -255,7 +240,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DeleteEmbeddingResponse'
+                items:
+                  type: string
+                  format: uuid
+                type: array
+                title: Response Delete Api V1 Collections  Collection Id  Delete Post
         '422':
           description: Validation Error
           content:
@@ -280,6 +269,7 @@ paths:
             application/json:
               schema:
                 type: integer
+                title: Response Count Api V1 Collections  Collection Id  Count Get
         '422':
           description: Validation Error
           content:
@@ -310,30 +300,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/QueryResult'
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HTTPValidationError'
-  /api/v1/collections/{collection_name}/create_index:
-    post:
-      summary: Create Index
-      operationId: create_index
-      parameters:
-        - required: true
-          schema:
-            type: string
-            title: Collection Name
-          name: collection_name
-          in: path
-      responses:
-        '200':
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                type: boolean
         '422':
           description: Validation Error
           content:
@@ -377,6 +343,10 @@ paths:
       responses:
         '200':
           description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collection'
         '422':
           description: Validation Error
           content:
@@ -403,6 +373,10 @@ paths:
       responses:
         '200':
           description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collection'
         '422':
           description: Validation Error
           content:
@@ -414,18 +388,12 @@ components:
     AddEmbedding:
       properties:
         embeddings:
-          items:
-            type: array
-            items:
-              type: number
-              format: float
+          items: {}
           type: array
           title: Embeddings
         metadatas:
           items:
             type: object
-            additionalProperties:
-              type: string
           type: array
           title: Metadatas
         documents:
@@ -438,14 +406,27 @@ components:
             type: string
           type: array
           title: Ids
-        increment_index:
-          type: boolean
-          title: Increment Index
-          default: true
       type: object
       required:
         - ids
       title: AddEmbedding
+    Collection:
+      properties:
+        name:
+          type: string
+          title: Name
+        id:
+          type: string
+          format: uuid
+          title: Id
+        metadata:
+          type: object
+          title: Metadata
+      type: object
+      required:
+        - name
+        - id
+      title: Collection
     CreateCollection:
       properties:
         name:
@@ -454,8 +435,6 @@ components:
         metadata:
           type: object
           title: Metadata
-          additionalProperties:
-            type: string
         get_or_create:
           type: boolean
           title: Get Or Create
@@ -464,23 +443,6 @@ components:
       required:
         - name
       title: CreateCollection
-    CreateCollectionResponse:
-      type: object
-      title: CreateCollectionResponse
-      properties:
-        id:
-          type: string
-          title: Id
-        name:
-          type: string
-          title: Name
-        metadata:
-          $ref: '#/components/schemas/MetadataSimple'
-    MetadataSimple:
-      type: object
-      title: MetadataSimple
-      additionalProperties:
-        type: string
     DeleteEmbedding:
       properties:
         ids:
@@ -491,20 +453,11 @@ components:
         where:
           type: object
           title: Where
-          additionalProperties:
-            type: string
         where_document:
           type: object
           title: Where Document
-          additionalProperties:
-            type: string
       type: object
       title: DeleteEmbedding
-    DeleteEmbeddingResponse:
-      type: array
-      title: DeleteEmbeddingResponse
-      items:
-        type: string
     GetEmbedding:
       properties:
         ids:
@@ -515,13 +468,9 @@ components:
         where:
           type: object
           title: Where
-          additionalProperties:
-            type: string
         where_document:
           type: object
           title: Where Document
-          additionalProperties:
-            type: string
         sort:
           type: string
           title: Sort
@@ -553,6 +502,47 @@ components:
             - documents
       type: object
       title: GetEmbedding
+    GetResult:
+      properties:
+        ids:
+          items:
+            type: string
+          type: array
+          title: Ids
+        embeddings:
+          items:
+            anyOf:
+              - items:
+                  type: number
+                type: array
+              - items:
+                  type: integer
+                type: array
+          type: array
+          title: Embeddings
+        documents:
+          items:
+            type: string
+          type: array
+          title: Documents
+        metadatas:
+          items:
+            additionalProperties:
+              anyOf:
+                - type: string
+                - type: integer
+                - type: number
+                - type: boolean
+            type: object
+          type: array
+          title: Metadatas
+      type: object
+      required:
+        - ids
+        - embeddings
+        - documents
+        - metadatas
+      title: GetResult
     HTTPValidationError:
       properties:
         detail:
@@ -567,22 +557,14 @@ components:
         where:
           type: object
           title: Where
-          additionalProperties:
-            type: string
-          default: { }
+          default: {}
         where_document:
           type: object
           title: Where Document
-          additionalProperties:
-            type: string
-          default: { }
+          default: {}
         query_embeddings:
+          items: {}
           type: array
-          items:
-            type: array
-            items:
-              type: number
-              format: float
           title: Query Embeddings
         n_results:
           type: integer
@@ -590,12 +572,19 @@ components:
           default: 10
         include:
           items:
-            type: string
-            enum:
-              - documents
-              - embeddings
-              - metadatas
-              - distances
+            anyOf:
+              - type: string
+                enum:
+                  - documents
+              - type: string
+                enum:
+                  - embeddings
+              - type: string
+                enum:
+                  - metadatas
+              - type: string
+                enum:
+                  - distances
           type: array
           title: Include
           default:
@@ -606,15 +595,63 @@ components:
       required:
         - query_embeddings
       title: QueryEmbedding
-    RawSql:
+    QueryResult:
       properties:
-        raw_sql:
-          type: string
-          title: Raw Sql
+        ids:
+          items:
+            items:
+              type: string
+            type: array
+          type: array
+          title: Ids
+        embeddings:
+          items:
+            items:
+              anyOf:
+                - items:
+                    type: number
+                  type: array
+                - items:
+                    type: integer
+                  type: array
+            type: array
+          type: array
+          title: Embeddings
+        documents:
+          items:
+            items:
+              type: string
+            type: array
+          type: array
+          title: Documents
+        metadatas:
+          items:
+            items:
+              additionalProperties:
+                anyOf:
+                  - type: string
+                  - type: integer
+                  - type: number
+                  - type: boolean
+              type: object
+            type: array
+          type: array
+          title: Metadatas
+        distances:
+          items:
+            items:
+              type: number
+            type: array
+          type: array
+          title: Distances
       type: object
       required:
-        - raw_sql
-      title: RawSql
+        - ids
+        - embeddings
+        - documents
+        - metadatas
+        - distances
+      title: QueryResult
     UpdateCollection:
       properties:
         new_name:
@@ -623,20 +660,14 @@ components:
         new_metadata:
           type: object
           title: New Metadata
-          additionalProperties:
-            type: string
       type: object
       title: UpdateCollection
     UpdateEmbedding:
       properties:
         embeddings:
+          items: {}
           type: array
           title: Embeddings
-          items:
-            type: array
-            items:
-              type: number
-              format: float
         metadatas:
           items:
             type: object
@@ -652,10 +683,6 @@ components:
             type: string
           type: array
           title: Ids
-        increment_index:
-          type: boolean
-          title: Increment Index
-          default: true
       type: object
       required:
         - ids
@@ -681,73 +708,3 @@ components:
         - msg
         - type
       title: ValidationError
-    CollectionData:
-      type: object
-      title: CollectionData
-      properties:
-        ids:
-          title: Ids
-          type: array
-          items:
-            type: string
-        documents:
-          title: Documents
-          type: array
-          items:
-            type: string
-        metadatas:
-          title: Metadatas
-          type: array
-          items:
-            type: object
-            additionalProperties:
-              type: string
-    QueryResult:
-      type: object
-      title: QueryResult
-      properties:
-        documents:
-          title: Documents
-          type: array
-          items:
-            type: array
-            items:
-              type: string
-        ids:
-          title: Ids
-          type: array
-          items:
-            type: array
-            items:
-              type: string
-        metadatas:
-          title: Metadatas
-          type: array
-          items:
-            type: array
-            items:
-              type: object
-              additionalProperties:
-                type: string
-        distances:
-          title: Distances
-          type: array
-          items:
-            type: array
-            items:
-              type: number
-              format: float
-    Collection:
-      type: object
-      title: Collection
-      properties:
-        id:
-          type: string
-          title: Id
-        name:
-          type: string
-          title: Name
-        metadata:
-          $ref: '#/components/schemas/MetadataSimple'
-
-
